--- a/src/components/navigation.css
+++ b/src/components/navigation.css
@@ -1,9 +1,9 @@
 .nav {
     width: 100%;
-    height: 80px;
-    background-color: rgb(19, 19, 19);
+    height: 100px;
+    background-image: url("./lemonade_wallpaper.png");
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
   }
   
