--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -5,19 +5,26 @@
     align-items: center;
   }
   
+  .drinkorder{
+    font-size: 50px;
+    margin-top: 15px;
+  }
+
   .cartItem {
     width: 700px;
     height: 250px;
     display: flex;
   
     align-items: center;
-    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+    background-color: #faf2c8;
     border-radius: 25px;
     margin: 30px;
   }
   
   .cartItem img {
+    margin-left: 25px;
     width: 200px;
+    border-radius: 10px;
   }
   
   .cartItem .description {
@@ -27,17 +34,29 @@
   
   .countHandler input {
     width: 40px;
+    margin-top: 30px;
     text-align: center;
     font-weight: bolder;
   }
   
+  .plusminus{
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+
   .checkout button {
-    width: 150px;
-    height: 50px;
+    width: 200px;
+    height: 60px;
     background-color: rgb(19, 19, 19);
-    color: white;
-    border: none;
+    color: #faf2c8;
     border-radius: 8px;
+    font-size: 20px;
     margin: 10px;
     cursor: pointer;
+  }
+
+  .total {
+    font-weight: bold;
+    font-size: 25px;
+    margin-bottom: 5px;
   }
