--- a/src/pages/shop/shop.css
+++ b/src/pages/shop/shop.css
@@ -1,8 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;700&display=swap');
+
 .shopTitle {
-    margin-top: 100px;
-    text-align: center;
-    font-size: 40px;
+    margin-top: 30px;
+    justify-content: center;
+    font-size: 50px;
+    display: flex;
+    font-family: 'Josefin Sans', sans-serif;
   }
+
+  .shopLogo {
+    width: 5%;
+    height: 5%;
+  }
+
   .products {
     width: 100%;
     height: auto;
@@ -23,10 +33,13 @@
   }
   
   .product img {
+    border-radius: 15px;
     width: 400px;
   }
   
   .product .description {
+    margin-top: 15px;
+    font-size: 25px;
     text-align: center;
   }
   
@@ -38,7 +51,10 @@
   .addToCartBttn {
     background-color: transparent;
     border: 2px solid rgb(19, 19, 19);
-    min-width: 100px;
+    min-width: 130px;
+    font-size: 15px;
+    font-weight: bold;
+    margin-top: 15px;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 5px;
